exports[`test should render a hidden profile image and a visible avatar image 1`] = `
<div>
  <div
    className="hidden">
    <img
      className="image"
      height="75"
      onError={[Function]}
      onLoad={[Function]}
      src="profile.jpg"
      width="75" />
  </div>
  <div>
    <img
      className="image"
      height="75"
      src={Object {}}
      width="75" />
  </div>
</div>
`;

exports[`test should render the avatar image 1`] = `
<div>
  <div>
    <img
      alt="avatar"
      className="image"
      height="75"
      src={Object {}}
      width="75" />
  </div>
</div>
`;

exports[`test should render the profile image 1`] = `
<div>
  <div>
    <img
      alt="profile"
      className="image"
      height="75"
      onError={[Function]}
      onLoad={[Function]}
      src="profile.jpg"
      width="75" />
  </div>
</div>
`;
